amf-cli/shared/src/test/resources/parser-results/raml/error/items-key-in-object.raml
#%RAML 1.0
title: Serialization API

types:
  Email:
    type: object
    properties:
      name:
        type: string
      id:
        type: number
  Emails:
    type: object
    items: Email